--- a/templates/jobs/category-detail.html
+++ b/templates/jobs/category-detail.html
@@ -25,13 +25,13 @@
 			            <div class="tab-content p-4" id="v-pills-tabContent">
 
 			              <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-nextgen-tab">
-			              	<form action="{% url 'jobs:search' %}" class="search-job" method="get" >
+			              	<form action="#" class="search-job">
 			              		<div class="row">
 			              			<div class="col-md">
 			              				<div class="form-group">
 				              				<div class="form-field">
 				              					<div class="icon"><span class="icon-briefcase"></span></div>
-								                <input type="text" name="job_title" class="form-control" placeholder="eg. Garphic. Web Developer">
+								                <input type="text" class="form-control" placeholder="eg. Garphic. Web Developer">
 								              </div>
 							              </div>
 			              			</div>
@@ -40,12 +40,13 @@
 			              					<div class="form-field">
 				              					<div class="select-wrap">
 						                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-						                      <select name="job_type" id="" class="form-control">
-						                      	<option value="full_time">Full Time</option>
-						                        <option value="part_time">Part Time</option>
-						                        <option value="freelance">Freelance</option>
-						                        <option value="internship">Internship</option>
-						                        <option value="temporary">Temporary</option>
+						                      <select name="" id="" class="form-control">
+						                      	<option value="">Category</option>
+						                      	<option value="">Full Time</option>
+						                        <option value="">Part Time</option>
+						                        <option value="">Freelance</option>
+						                        <option value="">Internship</option>
+						                        <option value="">Temporary</option>
 						                      </select>
 						                    </div>
 								              </div>
@@ -55,7 +56,7 @@
 			              				<div class="form-group">
 			              					<div class="form-field">
 				              					<div class="icon"><span class="icon-map-marker"></span></div>
-								                <input type="text" name="job_location" class="form-control" placeholder="Location">
+								                <input type="text" class="form-control" placeholder="Location">
 								              </div>
 							              </div>
 			              			</div>
@@ -78,6 +79,23 @@
 				              				<div class="form-field">
 				              					<div class="icon"><span class="icon-user"></span></div>
 								                <input type="text" class="form-control" placeholder="eg. Adam Scott">
+								              </div>
+							              </div>
+			              			</div>
+			              			<div class="col-md">
+			              				<div class="form-group">
+			              					<div class="form-field">
+				              					<div class="select-wrap">
+						                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+						                      <select name="" id="" class="form-control">
+						                      	<option value="">Category</option>
+						                      	<option value="">Full Time</option>
+						                        <option value="">Part Time</option>
+						                        <option value="">Freelance</option>
+						                        <option value="">Internship</option>
+						                        <option value="">Temporary</option>
+						                      </select>
+						                    </div>
 								              </div>
 							              </div>
 			              			</div>
@@ -151,34 +169,13 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-counter">
-    	<div class="container">
-    		<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Categories work wating for you</span>
-            <h2 class="mb-4"><span>Current</span> Job Posts</h2>
-          </div>
-        </div>
-        <div class="row">
-            {% for category in categories %}
-        	<div class="col-md-3 ftco-animate">
-        		<ul class="category">
-
-        			<li><a href="{% url 'jobs:category_detail' category.slug category.pk%}">{{category.title}}<span class="number" data-number={{category.job_count}}>0</span></a></li>
-        		</ul>
-        	</div>
-            {% endfor %}
-
-        </div>
-    	</div>
-    </section>
 
 		<section class="ftco-section bg-light">
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Recently Added Jobs</span>
-            <h2 class="mb-4"><span>Recent</span> Jobs</h2>
+
+            <h2 class="mb-4"><span>All {{category.title}}</span> Jobs Available</h2>
           </div>
         </div>
 
