--- a/templates/jobs/save.html
+++ b/templates/jobs/save.html
@@ -21,3 +21,4 @@
     	</div>
     </section>
     <span class="subheading">Recently Added Jobs</span>
+    	<form action="{% url 'jobs:search' %}" class="search-job" method="get" >
