--- a/templates/jobs/single.html
+++ b/templates/jobs/single.html
@@ -21,14 +21,55 @@
             <h2 class="mb-3">{{job.title}}</h2>
             <p>{{job.description|safe}}</p>
             <hr>
-            {% if user.is_employee%}
-            {% csrf_token%}
+
+
             <form method="post">
+            {% csrf_token%}
+               {% if user.is_employee%}
+              <div class="ml-auto d-flex">
+                  {% if employee_applied%}
+                   <input type="submit" value="Apply" class="btn btn-primary py-2 mr-1" disabled title="you already applied">
+                  {%else%}
+
+
              <input type="submit" value="Apply" class="btn btn-primary py-2 mr-1">
+              <a href="#" class="btn btn-danger rounded-circle btn-favorite d-flex align-items-center">
+                	<span class="icon-heart"></span>
+                </a>
+                  {%endif%}
+                </div>
+                  {% endif%}
 
             </form>
+              {% if user.is_employer  %}
+              {% if applied_employees%}
+              <div class="list-group">
+              <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+                candidates who applied for the job
+              </button>
 
-            {% endif%}
+               {% for employee in applied_employees %}
+               <a href="#" class="list-group-item list-group-item-action">{{employee.first_name}}</a>
+                {% endfor %}
+
+                 </div>
+              {% else %}
+              <div class="list-group">
+              <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+                 no candidates who applied for the job
+              </button>
+
+
+
+                 </div>
+                {% endif %}
+              {% endif %}
+
+
+  </div>
+
+
+
 
 
           </div> <!-- .col-md-8 -->
