--- a/templates/jobs/index.html
+++ b/templates/jobs/index.html
@@ -155,7 +155,7 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Categories work wating for you</span>
+          	<span class="subheading">Categories work waiting for you</span>
             <h2 class="mb-4"><span>Current</span> Job Posts</h2>
           </div>
         </div>
