--- a/templates/users/employee-profile.html
+++ b/templates/users/employee-profile.html
@@ -1,10 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html'%}
+{% load static %}
+{% block content %}
 
-</body>
-</html>
+ <div class="hero-wrap js-fullheight" style="background-image: url( '{% static 'images/bg_2.jpg' %}');" data-stellar-background-ratio="0.5">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start" data-scrollax-parent="true">
+          <div class="col-md-8 ftco-animate text-center text-md-left mb-5" data-scrollax=" properties: { translateY: '70%' }">
+          	<p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-3"><a href="{% url 'jobs:home'%}">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-3"><a href="blog.html">candidate's profile <i class="ion-ios-arrow-forward"></i></a></span> <span>candidate's profile</span></p>
+            <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">candidate's profile</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="ftco-section ftco-degree-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 ftco-animate"style="text-align:center">
+            <h2 class="mb-3">{{account.first_name}} {{account.last_name}}</h2>
+              <h5><img src="{{ profile.image.url }}"></h5>
+              <h5>{{ account.email }}</h5>
+              <h5>{{ profile.birth_day}}</h5>
+              <h5>{{ profile.location }}</h5>
+
+            <p>{{profile.resume|safe}}</p>
+            <hr>
+
+
+
+
+
+          </div> <!-- .col-md-8 -->
+          <div class="col-md-4 sidebar ftco-animate">
+            <div class="sidebar-box">
+              <form action="#" class="search-form">
+                <div class="form-group">
+                  <span class="icon icon-search"></span>
+                  <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
+                </div>
+              </form>
+            </div>
+            <div class="sidebar-box ftco-animate">
+              <div class="categories">
+                <h3>Categories</h3>
+                {% for category in categories %}
+                <li><a href="#">{{category.title}} <span>{{ category.job_count}}</span></a></li>
+                {% endfor %}
+
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+      </div>
+    </section> <!-- .section -->
+
+		{% endblock%}
