--- a/templates/jobs/single.html
+++ b/templates/jobs/single.html
@@ -32,9 +32,19 @@
                   {%else%}
 
 
-             <input type="submit" value="Apply" class="btn btn-primary py-2 mr-1">
-              <a href="#" class="btn btn-danger rounded-circle btn-favorite d-flex align-items-center">
+
+
+
+            <input type="submit" value="Apply" class="btn btn-primary py-2 mr-1">
+                  {% if in_my_list%}
+              <a href="javascripts:void(0);"id="jobwl{{ job.id }}" title="remove from my wish list" onclick="removefrommywhishlist({{ job.id }})" class="btn btn-danger rounded-circle btn-favorite d-flex align-items-center">
                 	<span class="icon-heart"></span>
+                </a>
+                              {% else%}
+                 <a href="javascripts:void(0);"id="jobwl{{ job.id }}" title="add to  my wish list" onclick="addtomywhishlist({{ job.id }})" class="btn btn-primary rounded-circle btn-favorite d-flex align-items-center">
+                	<span class="icon-heart"></span>
+                </a>
+                  {% endif %}
                 </a>
                   {%endif%}
                 </div>
@@ -49,7 +59,7 @@
               </button>
 
                {% for employee in applied_employees %}
-               <a href="{% url 'users:employee_profile' pk=employee.pk %}" class="list-group-item list-group-item-action">{{employee.first_name}}  {{ employee.last_name}}</a>
+               <a href="{% url 'users:employee_profile' employee_id=employee.pk job_id=job.id %}" class="list-group-item list-group-item-action">{{employee.first_name}}  {{ employee.last_name}}</a>
                 {% endfor %}
 
                  </div>
@@ -62,7 +72,14 @@
 
 
                  </div>
+
                 {% endif %}
+               <div class="tag-widget post-tag-container mb-5 mt-5">
+                  <a href="{% url 'jobs:delete_job' slug=job.slug pk=job.pk%}" class="btn btn-danger py-2 mr-1">delete</a>
+                  <a href="{% url 'jobs:update_job' slug=job.slug pk=job.pk%}" class="btn btn-primary py-2 mr-1">update</a>
+
+
+              </div>
               {% endif %}
 
 
