--- a/templates/jobs/update.html
+++ b/templates/jobs/update.html
@@ -7,8 +7,8 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start" data-scrollax-parent="true">
           <div class="col-md-8 ftco-animate text-center text-md-left mb-5" data-scrollax=" properties: { translateY: '70%' }">
-          	<p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Sign in</span></p>
-            <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Sign in</h1>
+          	<p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Post a Job</span></p>
+            <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">update a job</h1>
           </div>
         </div>
       </div>
@@ -19,9 +19,7 @@
         <div class="row">
 
           <div class="col-md-12 col-lg-8 mb-5">
-              {% if not user.is_authenticated%}
-
-
+              {% if user.is_authenticated and user.is_employer %}
 
 			     <form action="#" class="p-5 bg-white" method="post">
                      {% csrf_token %}
@@ -41,37 +39,63 @@
                          </button>
                      </div>
                      {% endif %}
-                     {% for field in form.visible_fields|slice:"5"%}
+                     {% for field in form.visible_fields|slice:"3"%}
 
 
               <div class="row form-group">
                 <div class="col-md-12 mb-3 mb-md-0">
                   <label class="font-weight-bold" for="fullname">{{field.label}}</label>
-                  <input type="{{ field.field.widget.input_type}}" id="fullname" class="form-control" placeholder="{{field.label}}" name="{{  field.html_name}}">
+                  <input type="{{ field.field.widget.input_type}}" id="fullname" class="form-control" value="{{field.value}}" name="{{  field.html_name}}">
                 </div>
               </div>
 
                      {% endfor %}
+                     <div class="row form-group">
+                         <div class="col-md-12"><h3> Job type</h3></div>
+                         <div class="col-md-12 mb-3 mb-md-0">
+                             <label for="option-job-type-1">
+                                 {{ form.job_type }}
+
+                             </label>
+                         </div>
+                     </div>
+                     <div class="row form-group">
+                         <div class="col-md-12"><h3> Job Category</h3></div>
+                         <div class="col-md-12 mb-3 mb-md-0">
+                             <label for="option-job-type-1">
+                                 {{ form.category }}
+
+                             </label>
+                         </div>
+                     </div>
+                     <div class="row form-group">
+                         <div class="col-md-12"><h3> Job Description</h3></div>
+                         {{form.media}}
+                         {{ form.description}}
+                     </div>
+
+
+
 
 
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Login" class="btn btn-primary  py-2 px-5">
-                    <label class="font-weight-bold"><a href="{% url 'password_reset'%}"> forgot password?</a></label>
-
+                  <input type="submit" value="Update" class="btn btn-primary  py-2 px-5">
                 </div>
               </div>
 
 
             </form>
               {% else %}
-               <div class="row form-group">
-                <div class="col-md-12 mb-3 mb-md-0">
-                  <label class="font-weight-bold" for="fullname" style="color:red"> you already logged in</label>
-                </div>
-              </div>
-              {% endif %}
+              <div class="row form-group">
+                         <div class="col-md-12 mb-3 mb-md-0">
+                             <label for="option-job-type-1">
+                                 you are not an employer
+
+                             </label>
+                         </div>
+                    {% endif %}
           </div>
 
           <div class="col-lg-4">
