--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -7,8 +7,8 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start" data-scrollax-parent="true">
           <div class="col-md-8 ftco-animate text-center text-md-left mb-5" data-scrollax=" properties: { translateY: '70%' }">
-          	<p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-3"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Sign in</span></p>
-            <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Sign in</h1>
+          	<p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-3"><a href="index.html"><i class="ion-ios-arrow-forward"></i></a></span> <span></span></p>
+            <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">change password</h1>
           </div>
         </div>
       </div>
@@ -19,7 +19,7 @@
         <div class="row">
 
           <div class="col-md-12 col-lg-8 mb-5">
-              {% if not user.is_authenticated%}
+              {% if  user.is_authenticated%}
 
 
 
@@ -41,36 +41,42 @@
                          </button>
                      </div>
                      {% endif %}
-                     {% for field in form.visible_fields|slice:"5"%}
+
 
 
               <div class="row form-group">
                 <div class="col-md-12 mb-3 mb-md-0">
-                  <label class="font-weight-bold" for="fullname">{{field.label}}</label>
-                  <input type="{{ field.field.widget.input_type}}" id="fullname" class="form-control" placeholder="{{field.label}}" name="{{  field.html_name}}">
+                  <label class="font-weight-bold" >old Password</label>
+                  <input type="password"  class="form-control" placeholder="Old Password" name="old_password">
+                </div>
+              </div>
+               <div class="row form-group">
+                <div class="col-md-12 mb-3 mb-md-0">
+                  <label class="font-weight-bold" >new password</label>
+                  <input type="password"  class="form-control" placeholder="New Password" name="new_password">
+                </div>
+              </div>
+               <div class="row form-group">
+                <div class="col-md-12 mb-3 mb-md-0">
+                  <label class="font-weight-bold" >confirm</label>
+                  <input type="password"  class="form-control" placeholder="confrm Password" name="new_password1">
                 </div>
               </div>
 
-                     {% endfor %}
+
+
 
 
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Login" class="btn btn-primary  py-2 px-5">
-                    <label class="font-weight-bold"><a href="{% url 'password_reset'%}"> forgot password?</a></label>
-
+                  <input type="submit" value="Change" class="btn btn-primary  py-2 px-5">
                 </div>
               </div>
 
 
             </form>
-              {% else %}
-               <div class="row form-group">
-                <div class="col-md-12 mb-3 mb-md-0">
-                  <label class="font-weight-bold" for="fullname" style="color:red"> you already logged in</label>
-                </div>
-              </div>
+
               {% endif %}
           </div>
 
