--- a/templates/users/employer-posted-jobs.html
+++ b/templates/users/employer-posted-jobs.html
@@ -108,77 +108,14 @@
       </div>
     </div>
 
-    <section class="ftco-section services-section bg-light">
-      <div class="container">
-        <div class="row d-flex">
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-resume"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Search Millions of Jobs</h3>
-                <p>A small river named Duden flows by their place and supplies.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-collaboration"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Easy To Manage Jobs</h3>
-                <p>A small river named Duden flows by their place and supplies.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-promotions"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Top Careers</h3>
-                <p>A small river named Duden flows by their place and supplies.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block">
-              <div class="icon"><span class="flaticon-employee"></span></div>
-              <div class="media-body">
-                <h3 class="heading mb-3">Search Expert Candidates</h3>
-                <p>A small river named Duden flows by their place and supplies.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <section class="ftco-section ftco-counter">
-    	<div class="container">
-    		<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading">Categories work waiting for you</span>
-            <h2 class="mb-4"><span>Current</span> Job Posts</h2>
-          </div>
-        </div>
-        <div class="row">
-            {% for category in categories %}
-        	<div class="col-md-3 ftco-animate">
-        		<ul class="category">
-
-        			<li><a href="{% url 'jobs:category_detail' category.slug category.pk%}">{{category.title}}<span class="number" data-number={{category.job_count}}>0</span></a></li>
-        		</ul>
-        	</div>
-            {% endfor %}
-
-        </div>
-    	</div>
-    </section>
 
 		<section class="ftco-section bg-light">
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
           	<span class="subheading">Recently Added Jobs</span>
-            <h2 class="mb-4"><span>Recent</span> Jobs</h2>
+            <h2 class="mb-4"><span>My</span> Jobs</h2>
           </div>
         </div>
 
@@ -224,7 +161,7 @@
 						</div>
           </div> <!-- end -->
                     {% endfor %}
-                    {% else%}
+                    {%if user.is_employer and not employer_jobs%}
 
           <div class="col-md-12 ftco-animate">
 						<div class="job-post-item bg-white p-4 d-block d-md-flex align-items-center">
@@ -236,6 +173,8 @@
 
 
                     {% endif %}
+                     {% endif %}
+
                      {% if user.is_employee%}
                               <div class="col-md-12 ftco-animate">
 						<div class="job-post-item bg-white p-4 d-block d-md-flex align-items-center">
@@ -244,10 +183,13 @@
 						   <div class="job-post-item-header d-flex align-items-center">
                                <h2 class="mr-3 text-black h4"> you are not an employer</h2>
                            </div>
+                          </div>
+                        </div>
 
 
 
                      {% endif %}
+                              </div>
 
 
 
